--- a/frontend/src/scss/home/About.scss
+++ b/frontend/src/scss/home/About.scss
@@ -30,6 +30,7 @@
             border-radius: 0;
             margin-top: 25px;
             text-decoration: none;
+            font-size: 1rem;
 
             &:hover {
                 background-color: transparent;
