--- a/frontend/src/scss/home/Carousel.scss
+++ b/frontend/src/scss/home/Carousel.scss
@@ -2,100 +2,219 @@
     -webkit-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
+    overflow: visible;
+
+    #carouselExampleIndicators {
+        position: unset;
+        width: 100%;
+        overflow: visible;
+    }
+
+    a.previousButton,
+    a.nextButton {
+        position: absolute;
+        top: 100% !important;
+        margin-left: 10%;
+        width: 50px;
+        height: 50px;
+        background-color: #FF4F5A;
+        z-index: 9999;
+        border-radius: 50%;
+
+
+
+
+        svg {
+            width: 100%;
+            height: 100%;
+
+            display: grid;
+            place-items: center;
+            font-size: .5rem;
+
+            polygon {
+                fill: #fff;
+
+            }
+        }
+    }
+
+    a.nextButton {
+        left: 10%;
+        background-color: #3DB2AD;
+
+        @media (max-width:767px) {
+            left: 20%;
+        }
+
+
+
+    }
+
+    // .previousButton,
+    // .nextButton {
+    //     position: relative;
+    //     width: 55px;
+    //     height: 55px;
+    //     border: none;
+    //     border-radius: 100%;
+    //     opacity: 1;
+    //     background-repeat: no-repeat;
+    //     background-size: 14px;
+    //     background-position: center;
+    //     //background-color: #1cbbb4;
+    //     margin: 2px;
+    //     color: pink;
+    //     -webkit-border-radius: 100%;
+    //     -moz-border-radius: 100%;
+    //     -ms-border-radius: 100%;
+    //     -o-border-radius: 100%;
+    // }
+
+    ol.carousel-indicators {
+        margin: 0;
+        width: 75px;
+        bottom: 45px;
+        left: initial;
+        right: 25px;
+
+        p {
+            border-radius: 100%;
+            text-indent: 0px;
+            text-align: center;
+            line-height: 55px;
+            color: #ffffff;
+            background-color: transparent;
+            -webkit-border-radius: 100%;
+            -moz-border-radius: 100%;
+            -ms-border-radius: 100%;
+            -o-border-radius: 100%;
+        }
+    }
+
 
 
 
 
     .slider {
         width: 100%;
-        height: 700px;
+        min-height: 600px;
+        overflow: visible;
+
+        .row {
+            height: 100%;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            align-items: center;
+            width: 100%;
+
+
+
+            div {
+
+                margin: 0 auto;
+
+
+
+                .detail-box {
+
+
+                    h1 {
+                        color: #ffffff;
+                        font-weight: bold;
+                        text-transform: uppercase;
+                    }
+
+                    p {
+                        color: #ffffff;
+                        margin-top: 15px;
+                    }
+
+                    .btn-box {
+                        display: -webkit-box;
+                        display: -ms-flexbox;
+                        display: flex;
+                        -ms-flex-wrap: wrap;
+                        flex-wrap: wrap;
+                        margin: 45px -5px 0 -5px;
+
+                        a {
+                            text-align: center;
+                            width: 165px;
+                            font-size: 15px;
+                            margin: 5px;
+                        }
+
+                        .btn-1 {
+                            width: 8rem;
+                            display: inline-block;
+                            padding: 10px 0;
+                            background-color: #ff4f5a;
+                            color: #ffffff;
+                            -webkit-transition: all 0.3s;
+                            transition: all 0.3s;
+                            border: 1px solid transparent;
+                            border-radius: 0;
+                            font-size: 1rem;
+
+                            &:hover {
+                                background-color: transparent;
+                                border-color: #ff4f5a;
+                                color: #ff4f5a;
+                            }
+                        }
+
+                        .btn-2 {
+                            width: 8rem;
+                            display: inline-block;
+                            padding: 10px 0;
+                            background-color: #ffffff;
+                            color: #252525;
+                            -webkit-transition: all 0.3s;
+                            transition: all 0.3s;
+                            border: 1px solid transparent;
+                            border-radius: 0;
+                            font-size: 1rem;
+                            margin-left: 2rem;
+
+
+                            &:hover {
+                                background-color: transparent;
+                                border-color: #ffffff;
+                                color: #ffffff;
+                            }
+
+                        }
+                    }
+
+                }
+
+            }
+
+            .img-container {
+                .img-box {
+                    img {
+
+                        width: 100%;
+                    }
+                }
+            }
+        }
+
+
 
     }
 }
 
-.slider_section .row {
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-}
 
-.slider_section .row>div {
-    position: unset;
-}
 
-.slider_section .detail-box h1 {
-    color: #ffffff;
-    font-weight: bold;
-    text-transform: uppercase;
-}
 
-.slider_section .detail-box p {
-    color: #ffffff;
-    margin-top: 15px;
-}
 
-.slider_section .detail-box .btn-box {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    margin: 45px -5px 0 -5px;
-}
 
-.slider_section .detail-box .btn-box a {
-    text-align: center;
-    width: 165px;
-    font-size: 15px;
-    margin: 5px;
-}
 
-.slider_section .detail-box .btn-box .btn-1 {
-    display: inline-block;
-    padding: 10px 0;
-    background-color: #ff4f5a;
-    color: #ffffff;
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
-    border: 1px solid transparent;
-    border-radius: 0;
-}
 
-.slider_section .detail-box .btn-box .btn-1:hover {
-    background-color: transparent;
-    border-color: #ff4f5a;
-    color: #ff4f5a;
-}
-
-.slider_section .detail-box .btn-box .btn-2 {
-    display: inline-block;
-    padding: 10px 0;
-    background-color: #ffffff;
-    color: #252525;
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
-    border: 1px solid transparent;
-    border-radius: 0;
-}
-
-.slider_section .detail-box .btn-box .btn-2:hover {
-    background-color: transparent;
-    border-color: #ffffff;
-    color: #ffffff;
-}
-
-.slider_section .img-container .img-box img {
-    width: 100%;
-}
-
-.slider_section #carouselExampleIndicators {
-
-    position: unset;
-    width: 100%;
-}
 
 .slider_section .carousel_btn-container {
-
     position: absolute;
     bottom: 0;
     width: 120px;
@@ -108,53 +227,14 @@
     left: 8.5%;
     -webkit-transform: translateY(50%);
     transform: translateY(50%);
+    -moz-transform: translateY(50%);
+    -ms-transform: translateY(50%);
+    -o-transform: translateY(50%);
 }
 
-.slider_section .previousButton,
-.slider_section .nextButton {
-    position: relative;
-    width: 55px;
-    height: 55px;
-    border: none;
-    border-radius: 100%;
-    opacity: 1;
-    background-repeat: no-repeat;
-    background-size: 14px;
-    background-position: center;
-    // background-color: #1cbbb4;
-    margin: 2px;
 
-
-
-}
 
 .slider_section .carousel_btn-container .carousel-control-prev:hover,
 .slider_section .carousel_btn-container .carousel-control-next:hover {
     background-color: #ff4f5a;
-}
-
-// .slider_section .carousel_btn-container .carousel-control-prev {
-//     background-image: url("");
-// }
-
-// .slider_section .carousel_btn-container .carousel-control-next {
-//     background-image: url("");
-// }
-
-.slider_section ol.carousel-indicators {
-    margin: 0;
-    width: 75px;
-    bottom: 45px;
-    left: initial;
-    right: 25px;
-}
-
-.slider_section ol.carousel-indicators p {
-    border-radius: 100%;
-    text-indent: 0px;
-    text-align: center;
-    line-height: 55px;
-    color: #ffffff;
-    background-color: transparent;
-
 }
