--- a/frontend/src/scss/home/Filter.scss
+++ b/frontend/src/scss/home/Filter.scss
@@ -1,15 +1,56 @@
 @import "color";
 
 .filter {
-    width: 100%;
-    min-height: 100vh;
+
+    position: fixed !important;
+    top: 150px;
+    width: 350px;
+    height: 100vh;
     background-color: $white;
-    padding: 8px;
+    padding: 20px 20px 180px;
+
+
+
+
+    @media (max-width:767px) {
+        position: fixed;
+        top: 70px;
+        height: 100vh;
+        z-index: 9;
+        width: 70%;
+
+        p,
+        span {
+            font-size: 1.5rem;
+        }
+
+        label,
+        svg {
+
+            font-size: 1rem;
+
+        }
+
+
+
+    }
 
 
 
     .sortby {
         padding: 15px;
+
+
+
+
+        .close-filter {
+            width: 50px;
+            height: 50px;
+            font-size: 2rem;
+            background-color: transparent;
+            border: 0;
+
+        }
 
         .price {
 
