--- a/frontend/src/scss/home/Like.scss
+++ b/frontend/src/scss/home/Like.scss
@@ -1,6 +1,6 @@
 .btn-circle {
-    width: 40px;
-    height: 40px;
+    width: 2.5rem;
+    height: 2.5rem;
     padding: 6px 0px;
     border-radius: 50%;
     text-align: center;
@@ -11,8 +11,14 @@
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
 
+    @media (max-width: 321px) {
+        width: 3rem;
+        height: 3rem;
+    }
+
+
     svg {
 
-        font-size: 18px;
+        font-size: 1rem;
     }
 }
